samples/_failures_safe/1761155555_a8ee6f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_11159936.c: In function ‘main’:
./samples/SAFE/__tmp_11159936.c:148:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  148 |     for (size_t i
      |     ^~~
./samples/SAFE/__tmp_11159936.c:148:5: error: expected declaration or statement at end of input
